<resources>
    <string name="app_name">SiDelivery</string>
    <string name="prev">Prev</string>
    <string name="dummy_text">lorem ipsum</string>
    <string name="next_label">Next</string>
    <string name="welcome_back_label">Welcome\nBack!</string>
    <string name="login_label">Login</string>
    <string name="sign_up_label">Sign Up</string>
    <string name="create_an_account_label">Create An Account</string>
    <string name="create_account_label">Create an\nMerchant Account</string>
    <string name="register_desc">By clicking the Register button, you agree\nto the public offer?</string>
    <string name="register_label">Create Merchant</string>
    <string name="already_have_label">I Already Have an Account</string>
    <string name="forgot_password_label">Forgot\npassword?</string>
    <string name="submit_label">Submit</string>
    <string name="forgot_password_desc">* We will send you a message to set or reset your new password?</string>
    <string name="welcome_image_description">Welcome Image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="today_new_arrivable">Promo Hari Ini</string>
    <string name="best_of_the_today_food_list_update">Promo makanan cuma hari ini</string>
    <string name="current_location_string">Agrabad 435, Chittagong</string>
    <string name="lokasi_item">Banjarmasin</string>
    <string name="nama_makanan">Nasi Goreng</string>
    <string name="profile_username">John Doe</string>
    <string name="profile_email">john@gmail.com</string>
    <string name="account_setting">Account Settings</string>
    <string name="language">Feedback</string>
    <string name="new_version">New Version</string>
    <string name="logout">Logout</string>
    <string name="merchant_name">Merchant</string>
    <string name="driver_name">Driver</string>
</resources>