<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.home.fragments.ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="61dp"
            android:clipToPadding="false"
            android:elevation="25dp"
            android:hardwareAccelerated="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/profileConstraintLayout"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/custom_card"
                android:paddingHorizontal="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/profileImageView"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:src="@drawable/profiles"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/roundedImage" />

                <TextView
                    android:id="@+id/nameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginBottom="12dp"
                    android:text="@string/profile_username"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/profileImageView"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/emailTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginBottom="12dp"
                    android:text="@string/profile_email"
                    android:textColor="@color/gray"
                    android:textSize="10sp"
                    android:textStyle="italic"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/profileImageView"
                    app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

                <ImageButton
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/notif_button"
                    android:padding="12dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_bell"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/accountSettingConstraintLayout"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/custom_card"
                android:paddingHorizontal="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/profileConstraintLayout">

                <ImageView
                    android:id="@+id/profileIconImageView"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_profile"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/account_setting"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/profileIconImageView"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="19dp"
                    android:layout_height="19dp"
                    android:src="@drawable/ic_edit"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/feedBackLayout"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/custom_card_top"
                android:paddingHorizontal="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/accountSettingConstraintLayout">

                <ImageView
                    android:id="@+id/languageIconImageView"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_feedback"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/language"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/languageIconImageView"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="19dp"
                    android:layout_height="19dp"
                    android:src="@drawable/ic_right_arrow"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/newVersionSettingConstraintLayout"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@drawable/custom_card_bot"
                android:paddingHorizontal="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/feedBackLayout">

                <ImageView
                    android:id="@+id/newVersionIconImageView"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/ic_new_version"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:text="@string/new_version"
                    android:textColor="@color/black"
                    android:textSize="18dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/newVersionIconImageView"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="19dp"
                    android:layout_height="19dp"
                    android:src="@drawable/ic_right_arrow"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/logoutButton"
                android:layout_width="111dp"
                android:layout_height="35dp"
                android:layout_marginBottom="90dp"
                android:background="@drawable/auth_button"
                android:backgroundTint="@color/red"
                android:text="@string/logout"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</FrameLayout>